application server, loggers, HTTP server framework and fixes
- ADD: app services loads and initializes modules and services now
- ADD: HTTP server framework
- ADD: Flatten() method to AggregateLogger class
- FIX: .NET implementation of SystemConsole did not read or set the
text/background colors from/of System.Console
- FIX: OnGetInstance() of DelegateServiceLocator
- FIX: .NET 4 version of AsyncLogger was not set as non thread-safe
- FIX: typos

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/modules
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.RemoteComm/bin
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.RemoteComm/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.WcfHttp/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.WcfHttp/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Common/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Common/bin
