HTTP server framework, collections, network and fixes
- ADD: IEqualityComparer factory class
- ADD: types for handling TCP based network addresses
- ADD: IReadOnlyDictionary interface for compatibility reasons
- CHG: extended IHttpRequest and IHttpResponse interfaces and basic
types
- CHG: extended IHttpServer interface and basic types
- FIX: Response property in IHttpRequestContext

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.WcfHttp/bin
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Common/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.Common/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/obj
