--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.WcfHttp/MarcelJoachimKloubert.AppServer.Services.WcfHttp.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.WcfHttp/MarcelJoachimKloubert.AppServer.Services.WcfHttp.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
@@ -51,11 +52,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinaryMessage.cs" />
+    <Compile Include="HttpRequest.cs" />
+    <Compile Include="HttpResponse.cs" />
     <Compile Include="IWcfHttpServerService.cs" />
     <Compile Include="RawContentTypeMapper.cs" />
+    <Compile Include="Security\DelegateUserNamePasswordValidator.cs" />
     <Compile Include="WcfHttpServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WcfHttpServerService.cs" />
+    <Compile Include="Wcf\PasswordAuthPolicy.cs" />
+    <Compile Include="Wcf\PasswordCredentials.cs" />
+    <Compile Include="Wcf\PasswordTokenAuthenticator.cs" />
+    <Compile Include="Wcf\PasswordTokenManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LICENSE" />
