--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/MarcelJoachimKloubert.AppServer.Web.Common.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/MarcelJoachimKloubert.AppServer.Web.Common.csproj
@@ -53,6 +53,10 @@
       <Project>{f66c16a4-703b-4f09-a78d-2abb90030354}</Project>
       <Name>MarcelJoachimKloubert.ApplicationServer.SDK</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MarcelJoachimKloubert.ApplicationServer\MarcelJoachimKloubert.ApplicationServer.csproj">
+      <Project>{9f006f97-a3b2-48e5-ba64-7f2df3c59c82}</Project>
+      <Name>MarcelJoachimKloubert.ApplicationServer</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LICENSE" />
